[gd_scene load_steps=7 format=3 uid="uid://0j7qne8c1m10"]

[ext_resource type="Script" uid="uid://6xbufgn4qhbf" path="res://src/game/levels/level_template/level.gd" id="1_b1heh"]
[ext_resource type="PackedScene" uid="uid://d0wl53hsyfl8g" path="res://src/game/ui/menus/pause_menu/pause_menu.tscn" id="2_xh6xx"]
[ext_resource type="PackedScene" uid="uid://7o8w0bk4iaf8" path="res://src/game/ui/menus/defeat_menu/defeat_menu.tscn" id="3_qnwyr"]
[ext_resource type="PackedScene" uid="uid://cgf8nxut0nbdv" path="res://src/game/ui/menus/victory_menu/victory_menu.tscn" id="4_1qle4"]
[ext_resource type="PackedScene" uid="uid://d24f418usmrj5" path="res://src/game/environment/Goal.tscn" id="5_1qle4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_11ywe"]
radius = 40.0
height = 80.0

[node name="LevelTemplate" type="Node"]
script = ExtResource("1_b1heh")

[node name="Map" type="Node" parent="."]

[node name="Goal" parent="." instance=ExtResource("5_1qle4")]
z_index = 1
position = Vector2(2, 32)
collision_layer = 1
collision_mask = 4

[node name="InitialPlayerPosition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InitialPlayerPosition"]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_11ywe")

[node name="UILayerMenu" type="CanvasLayer" parent="."]
layer = 101

[node name="PauseMenu" parent="UILayerMenu" instance=ExtResource("2_xh6xx")]

[node name="DefeatMenu" parent="UILayerMenu" instance=ExtResource("3_qnwyr")]
z_index = 200

[node name="VictoryMenu" parent="UILayerMenu" instance=ExtResource("4_1qle4")]
z_index = 200

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.0052063186, 6.768387e-07, 0.06740496, 1)

[connection signal="return_selected" from="UILayerMenu/PauseMenu" to="." method="_on_return_requested"]
[connection signal="retry_selected" from="UILayerMenu/DefeatMenu" to="." method="_on_defeat_menu_retry_selected"]
[connection signal="return_selected" from="UILayerMenu/DefeatMenu" to="." method="_on_defeat_menu_return_selected"]
[connection signal="next_selected" from="UILayerMenu/VictoryMenu" to="." method="on_level_won"]
[connection signal="return_selected" from="UILayerMenu/VictoryMenu" to="." method="on_return_requested"]
